// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NoticeBar > NoticeBar baseVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!-- prefixIcon -->
  <!--v-if-->
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      这是一条普通的通知信息
      <!--v-if-->
    </div>
  </div>
  <!-- suffixIcon -->
  <!--v-if-->
</div>
`;

exports[`NoticeBar > NoticeBar customVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info cover-class"
>
  <!-- prefixIcon -->
  <div
    class="t-notice-bar__prefix-icon"
  >
    
    <svg
      class="t-icon t-icon-sound"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M15 1.29v21.42L5.74 17.5H1v-11h4.74L15 1.29zM5 8.5H3v7h2v-7zm2 7.41l6 3.38V4.71L7 8.08v7.83zm13.98-8.93l.6.8a7 7 0 010 8.44l-.6.8-1.6-1.2.6-.8a5 5 0 000-6.04l-.6-.8 1.6-1.2zm-2.8 2.11l.6.8a3.5 3.5 0 010 4.22l-.6.8-1.6-1.21.61-.8a1.5 1.5 0 000-1.8l-.6-.8 1.6-1.2z"
        fill="currentColor"
      />
    </svg>
    
  </div>
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述
      <!--v-if-->
    </div>
  </div>
  <!-- suffixIcon -->
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M8.09 17.5l5.5-5.5-5.5-5.5L9.5 5.09 16.41 12 9.5 18.91 8.09 17.5z"
        fill="currentColor"
      />
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar customizationVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!-- prefixIcon -->
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
        fill="currentColor"
      />
    </svg>
  </div>
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述
      <span
        class="t-notice-bar__operation"
      >
        
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          style="margin-left: 2px;"
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            详情
            
          </span>
          <!---->
        </a>
        
      </span>
    </div>
  </div>
  <!-- suffixIcon -->
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
        fill="currentColor"
      />
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar eventVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        这是一条普通的消息通知
        <span
          class="t-notice-bar__operation"
        >
          
          <a
            aria-disabled="false"
            class="t-link t-link--primary t-link--medium"
            style="margin-left: 5px;"
            target=""
          >
            <!---->
            <span
              class="t-link__content"
            >
              
              详情
              
            </span>
            <!---->
          </a>
          
        </span>
      </div>
    </div>
    <!-- suffixIcon -->
    <div
      class="t-notice-bar__suffix-icon"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M8.09 17.5l5.5-5.5-5.5-5.5L9.5 5.09 16.41 12 9.5 18.91 8.09 17.5z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-notice-bar t-notice-bar--info"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        这是一条普通的通知信息
        <!--v-if-->
      </div>
    </div>
    <!-- suffixIcon -->
    <div
      class="t-notice-bar__suffix-icon"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M8.09 17.5l5.5-5.5-5.5-5.5L9.5 5.09 16.41 12 9.5 18.91 8.09 17.5z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`NoticeBar > NoticeBar iconDemoVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!-- prefixIcon -->
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
        fill="currentColor"
      />
    </svg>
  </div>
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述
      <!--v-if-->
    </div>
  </div>
  <!-- suffixIcon -->
  <!--v-if-->
</div>
`;

exports[`NoticeBar > NoticeBar mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    NoticeBar 公告栏
  </h1>
  <p
    class="summary"
  >
    在导航栏下方，用于给用户显示提示消息。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纯文字的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <!--v-if-->
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带关闭的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带入口的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的消息通知
            <span
              class="t-notice-bar__operation"
            >
              
              <a
                aria-disabled="false"
                class="t-link t-link--primary t-link--medium"
                style="margin-left: 5px;"
                target=""
              >
                <!---->
                <span
                  class="t-link__content"
                >
                  
                  详情
                  
                </span>
                <!---->
              </a>
              
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.09 17.5l5.5-5.5-5.5-5.5L9.5 5.09 16.41 12 9.5 18.91 8.09 17.5z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.09 17.5l5.5-5.5-5.5-5.5L9.5 5.09 16.41 12 9.5 18.91 8.09 17.5z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定样式的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info cover-class"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          
          <svg
            class="t-icon t-icon-sound"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15 1.29v21.42L5.74 17.5H1v-11h4.74L15 1.29zM5 8.5H3v7h2v-7zm2 7.41l6 3.38V4.71L7 8.08v7.83zm13.98-8.93l.6.8a7 7 0 010 8.44l-.6.8-1.6-1.2.6-.8a5 5 0 000-6.04l-.6-.8 1.6-1.2zm-2.8 2.11l.6.8a3.5 3.5 0 010 4.22l-.6.8-1.6-1.21.61-.8a1.5 1.5 0 000-1.8l-.6-.8 1.6-1.2z"
              fill="currentColor"
            />
          </svg>
          
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.09 17.5l5.5-5.5-5.5-5.5L9.5 5.09 16.41 12 9.5 18.91 8.09 17.5z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义内容的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述
            <span
              class="t-notice-bar__operation"
            >
              
              <a
                aria-disabled="false"
                class="t-link t-link--primary t-link--medium"
                style="margin-left: 2px;"
                target=""
              >
                <!---->
                <span
                  class="t-link__content"
                >
                  
                  详情
                  
                </span>
                <!---->
              </a>
              
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        公告栏类型有普通（info）、警示（warning）、成功（success）、错误（error）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            默认状态公告栏默认状态公告栏
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--success notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            成功状态公告栏成功状态公告栏
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--warning notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            警示状态公告栏警示状态公告栏
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--error"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            错误状态公告栏错误状态公告栏
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 可滚动的公告栏
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        可滚动公告栏有水平 (horizontal) 和垂直 (vertical)
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <!--v-if-->
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述文
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述文
            <!--v-if-->
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          
          <svg
            class="t-icon t-icon-sound"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15 1.29v21.42L5.74 17.5H1v-11h4.74L15 1.29zM5 8.5H3v7h2v-7zm2 7.41l6 3.38V4.71L7 8.08v7.83zm13.98-8.93l.6.8a7 7 0 010 8.44l-.6.8-1.6-1.2.6-.8a5 5 0 000-6.04l-.6-.8 1.6-1.2zm-2.8 2.11l.6.8a3.5 3.5 0 010 4.22l-.6.8-1.6-1.21.61-.8a1.5 1.5 0 000-1.8l-.6-.8 1.6-1.2z"
              fill="currentColor"
            />
          </svg>
          
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div>
            <div
              class="t-swiper t-swiper--default t-notice-bar__content--vertical"
            >
              <div
                class="t-swiper__container"
                style="flex-direction: column; transition: none; height: auto;"
              >
                
                
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    君不见
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    高堂明镜悲白发
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    朝如青丝暮成雪
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    人生得意须尽欢
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    莫使金樽空对月
                  </div>
                  
                </div>
                
                
              </div>
              <!---->
            </div>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar scrollingVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <!--v-if-->
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        提示文字描述提示文字描述提示文字描述提示文字描述文
        <!--v-if-->
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        提示文字描述提示文字描述提示文字描述提示文字描述文
        <!--v-if-->
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--info"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-sound"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M15 1.29v21.42L5.74 17.5H1v-11h4.74L15 1.29zM5 8.5H3v7h2v-7zm2 7.41l6 3.38V4.71L7 8.08v7.83zm13.98-8.93l.6.8a7 7 0 010 8.44l-.6.8-1.6-1.2.6-.8a5 5 0 000-6.04l-.6-.8 1.6-1.2zm-2.8 2.11l.6.8a3.5 3.5 0 010 4.22l-.6.8-1.6-1.21.61-.8a1.5 1.5 0 000-1.8l-.6-.8 1.6-1.2z"
          fill="currentColor"
        />
      </svg>
      
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div>
        <div
          class="t-swiper t-swiper--default t-notice-bar__content--vertical"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: column; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                君不见
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                高堂明镜悲白发
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                朝如青丝暮成雪
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                人生得意须尽欢
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                莫使金樽空对月
              </div>
              
            </div>
            
            
          </div>
          <!---->
        </div>
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  
</div>
`;

exports[`NoticeBar > NoticeBar suffixIconVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!-- prefixIcon -->
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
        fill="currentColor"
      />
    </svg>
  </div>
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      这是一条普通的通知信息
      <!--v-if-->
    </div>
  </div>
  <!-- suffixIcon -->
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
        fill="currentColor"
      />
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        默认状态公告栏默认状态公告栏
        <!--v-if-->
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--success notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
          fill="currentColor"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        成功状态公告栏成功状态公告栏
        <!--v-if-->
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--warning notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        警示状态公告栏警示状态公告栏
        <!--v-if-->
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--error"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        错误状态公告栏错误状态公告栏
        <!--v-if-->
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  
</div>
`;
